Updated borders and fixed green contrast error

--- a/css/style.css
+++ b/css/style.css
@@ -44,27 +44,27 @@ footer {
     background-color: #ff0000;
     text-align: right;
     margin-left: 50px;
-    border-bottom-width: 2px;
-    border-left-width: 5px;
+    border-bottom: 2px;
+    border-left: 5px;
 }
 .blue {
     background-color: #0000ff;
     text-align: left;
     margin-right: 50px;
-    border-right-width: 5px;
-    border-top-width: 2px;
+    border-right: 5px;
+    border-top: 2px;
 }
 .yellow {
     background-color: #ffff00;
     text-align: right;
     margin-left: 50px;
-    border-bottom-width: 2px;
-    border-left-width: 5px;
+    border-bottom: 2px;
+    border-left: 5px;
 }
 .green {
     background-color: #008500;
     text-align: left;
     margin-right: 50px;
-    border-right-width: 5px;
-    border-top-width: 2px;
+    border-right: 5px;
+    border-top: 2px;
 }
